fix updateUser returning updated record
